# SoundMirror

./: .gitignore  README.md  backend_test.py  design_guidelines.json
.emergent/: emergent.yml  summary.txt
Base44_export/: package-lock.json  package.json
Base44_export/functions/: alignPronunciation.ts  analyzePhonemes.ts  azureSpeechToken.ts  azureTTS.ts  buildSegmentedVisemeTimeline.ts  deployAllBackends.ts  derivePhonetic.ts  generateChinesePollyAudio.ts  getDemoSegmentedTimeline.ts  getPhonemes.ts  googleTTS.ts  railway-cloudshell-setup.sh.ts  runChinesePolly.sh.ts  scorePronunciation.ts  storeTrainingData.ts  testRailwayToken.ts  textToSpeech.ts
Base44_export/functions/bsvtPing/: main.ts
Base44_export/src/: Layout.jsx  pages.config.js
backend/: .env  requirements.txt  server.py
backend/tests/: test_grading_logic.py  test_phonetic_display.py  test_soundmirror_api.py
frontend/: .env  package.json
frontend/electron/: main.js  preload.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/lib/: api.js  (+9 more)
memory/: PRD.md
soundmirror/: README.md
soundmirror/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
soundmirror/apps/desktop/src-tauri/src/: main.rs
sprites_head_side/: Side245.xcf
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
test_reports/pytest/: pytest_results.xml
(+124 files in other folders)
